tests/neg/missing-implicit3.scala
class Foo

val sortedFoos = List(new Foo).sorted // error
